added i2c and pwm, as well as mapped addresses in a seperate file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "stdlib.h": "c",
-        "uart.h": "c"
+        "uart.h": "c",
+        "timer.h": "c"
     }
 }
