--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdlib.h": "c",
         "uart.h": "c",
-        "timer.h": "c"
+        "timer.h": "c",
+        "irq.h": "c"
     }
 }
